syntax = "proto3";

package reader;
option go_package = "github.com/kellegous/reader";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Reader {
  rpc CheckHealth(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetEntriesByWeek(GetEntriesByWeekRequest)
      returns (GetEntriesByWeekResponse) {}
}

message GetEntriesByWeekRequest {
  enum WeekDay {
    SUNDAY = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
  }

  message FromWeekToWeek {
    google.protobuf.Timestamp from_week_of = 1;
    google.protobuf.Timestamp to_week_of = 2;
  }

  message NWeeksFromWeek {
    google.protobuf.Timestamp from_week_of = 1;
    uint32 n_weeks = 2;
  }

  oneof range {
    FromWeekToWeek from_week_to_week = 1;
    NWeeksFromWeek n_weeks_from_week = 2;
  }

  WeekDay week_starts_day = 3;
}

message GetEntriesByWeekResponse { repeated Entry entries = 1; }

message Entry { int64 id = 1; }